[workspace]
members = [
    "node",
    "pallets/xcavate-staking",
    "runtime",
    "pallets/community-loan-pool",
    "pallets/community-projects",
    "pallets/nft-marketplace",
    "pallets/property-governance",
    "pallets/property-management",
    "pallets/xcavate-whitelist",
]
resolver = "2"

[profile.release]
panic = "unwind"
